stop hiding date on mobile

--- a/euth_wagtail/assets/scss/components/_avatars.scss
+++ b/euth_wagtail/assets/scss/components/_avatars.scss
@@ -15,7 +15,9 @@
     .name {
         font-family: $font-family-sans-serif;
         font-weight: bold;
-        text-align: justify;
-        line-height: 31px;
+
+        @media screen and (min-width: $screen-sm-min) {
+            line-height: 31px;
+        }
     }
 }
